--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,8 +15,7 @@
           %em Share Your Ideas Now
       - else
         %h3
-          = link_to "Sign Up", new_user_registration_path
-          %em to Get Started Now
+          = link_to image_tag('intro-signup.png'), new_user_registration_path
     .body#submit-idea
       = render :partial => 'ideas/new', :locals => { :small => true }
   %hr.hide
