--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,11 @@
           %li= link_to "Currents", currents_path
     %ul.nav.user
       - if user_signed_in?
-        %li.first= link_to "#{h current_user.name}" , user_profile_path(current_user)
+        - if current_user.admin?
+          %li.first= link_to 'Admin', admin_dashboard_path
+          %li= link_to "#{h current_user.name}" , user_profile_path(current_user)
+        - else
+          %li.first= link_to "#{h current_user.name}" , user_profile_path(current_user)
         %li= link_to 'Settings', edit_user_registration_path
         %li= link_to 'Log Out', destroy_user_session_path, method: :delete
       - else
