--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,9 @@
       %meta{ :content => 'text/html; charset=UTF-8', "http-equiv" => "Content-Type" }
   %body
     #wrap
-      = render :partial => 'layouts/header'
+      = render :partial => 'layouts/application/header'
       #content
-        = render :partial => 'layouts/flash_messages'
+        = render :partial => 'layouts/application/flash_messages'
         = yield
       - cache 'footer' do
-        = render :partial => 'layouts/footer'
+        = render :partial => 'layouts/application/footer'
