--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title== #{LONG_SITE_NAME} - Admin
-    = stylesheet_link_tag    'admin/admin', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'admin/admin', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'admin', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
     - cache 'header' do
