--- a/app/views/layouts/admin/_header.html.haml
+++ b/app/views/layouts/admin/_header.html.haml
@@ -1,7 +1,7 @@
-%nav.navbar.navbar-default{ role: 'navigation' }
+%nav.navbar.navbar-default.navbar-fixed-top{ role: 'navigation' }
   %div.container-fluid
     %div.navbar-header
-      %a.navbar-brand= link_to LONG_SITE_NAME, root_path
+      %div.navbar-brand= link_to LONG_SITE_NAME, root_path
     %div.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li= link_to 'Dashboard', admin_dashboard_path
