--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,10 +11,13 @@
 
   %body
     = render :partial => 'layouts/admin/header'
-    %div.container{ style: 'padding-top: 50px;' }
-      = render :partial => 'layouts/application/flash_messages'
-      %div.col-lg-2.col-md-2.col-sm-2.col-xs-2
-        =render :partial => 'layouts/admin/sidebar'
-      %div.col-lg-10.col-md-10.col-sm-10.col-xs-10
-        = yield
+    %div.container-fluid{ style: 'padding-top: 50px;' }
+      .row
+        .col-lg-10.col-lg-offset-1.col-md-10.col-md-offset-1.col-sm-10.col-sm-offset-1.col-xs-10.col-xs-offset-1
+          = render :partial => 'layouts/admin/flash_messages'
+      .row
+        %div.col-lg-2.col-md-2.col-sm-2.col-xs-2
+          =render :partial => 'layouts/admin/sidebar'
+        %div.col-lg-10.col-md-10.col-sm-10.col-xs-10
+          = yield
 
