--- a/app/views/admin/ideas/_form.html.haml
+++ b/app/views/admin/ideas/_form.html.haml
@@ -6,5 +6,37 @@
         - @admin_idea.errors.full_messages.each do |msg|
           %li= msg
 
-  .actions
-    = f.submit 'Save'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :owner, 'Owner'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = select :idea, :owner_id, @users, class: 'form-control'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :title, 'Idea'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = f.text_field :title, class: 'form-control'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :description, 'Description'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = f.text_area :description, class: 'form-control', rows: '4'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :status, 'Status'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = select :idea, :status, @states, class: 'form-control'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :current, 'Current'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = select :idea, :current, @currents, class: 'form-control'
+  .form-group.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2
+      = f.label :tags, 'Tags'
+    .col-lg-8.col-md-8.col-sm-8.col-xs-8
+      = render :partial => 'admin/tags/tag_editor', :locals => { :f => f }
+
+  .actions.row
+    .col-lg-2.col-md-2.col-sm-2.col-xs-2.col-lg-offset-2.col-md-offset-2.col-sm-offset-2.col-xs-offset-2
+      = f.submit 'Save', class: 'btn btn-primary'
