Fix '@idea' variable references in form partial
The idea to render the form partial for is named '@idea,' not
'@admin-idea.' Fix any of the 'admin-idea' references to fix the
discrepancy.

--- a/app/views/admin/ideas/_form.html.haml
+++ b/app/views/admin/ideas/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for @admin_idea do |f|
-  - if @admin_idea.errors.any?
+= form_for @idea, class: 'form-inline' do |f|
+  - if @idea.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@admin_idea.errors.count, "error")} prohibited this admin_idea from being saved:"
+      %h2= "#{pluralize(@idea.errors.count, "error")} prohibited this idea from being saved:"
       %ul
-        - @admin_idea.errors.full_messages.each do |msg|
+        - @idea.errors.full_messages.each do |msg|
           %li= msg
 
   .form-group.row
