--- a/app/views/admin/ideas/edit.html.haml
+++ b/app/views/admin/ideas/edit.html.haml
@@ -1,7 +1,16 @@
-%h1 Editing admin_idea
+.container-fluid
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      .page-header
+        %h1 Edit Idea
 
-= render 'form'
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      = form_for @idea, class: 'form-inline', url: admin_idea_path do |f|
+        = render 'form', :locals => { :f => f }
 
-= link_to 'Show', @admin_idea
-\|
-= link_to 'Back', admin_ideas_path
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      = link_to 'Show', @idea
+      \|
+      = link_to 'Index', admin_ideas_path
