Bootstrap-ify admin Idea index view header

--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -1,4 +1,8 @@
-%h1 Listing admin_ideas
+.container-fluid
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      .page-header
+        %h1 Ideas
 
 %table
   %tr
