--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -9,6 +9,21 @@
     %th
     %th
     %th
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      .row
+        .col-lg-12.col-md-12.col-sm-12.col-xs-12
+          %button.btn.btn-success{ 'type' => 'button', 'data-toggle' => 'collapse', 'data-target' => '#new-idea-form' }
+            %i.glyphicon.glyphicon-plus
+            Create a new Idea
+
+      .row
+        .col-lg-12.col-md-12.col-sm-12.col-xs-12
+          .collapse.out#new-idea-form
+            .page-header
+              %h2 New Idea
+            = form_for @idea, class: 'form-inline', url: admin_ideas_path do |f|
+              = render 'form', :locals => { :f => f }
 
   - @admin_ideas.each do |admin_idea|
     %tr
