Adjust Admin sidebar layout
Put links inside a well for prettier formatting, excluding the old grid
system divs to give the sidebar more real estate.

--- a/app/views/layouts/admin/_sidebar.html.haml
+++ b/app/views/layouts/admin/_sidebar.html.haml
@@ -1,4 +1,3 @@
-.container-fluid
-  .row
-    .col-lg-12.col-md-12.col-sm-12.col-xs-12
-      = link_to 'Ideas', admin_ideas_path
+.well
+  %ul.nav.nav-stacked
+    %li= link_to 'Ideas', admin_ideas_path
