--- a/app/views/admin/currents/edit.html.haml
+++ b/app/views/admin/currents/edit.html.haml
@@ -1,5 +1,16 @@
-%h1 Editing admin_current
+.container-fluid
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      .page-header
+        %h1 Edit Idea
 
-= render 'admin/currents/form'
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      = form_for @current, class: 'form-inline', url: admin_current_path do |f|
+        = render 'form', :locals => { :f => f }
 
-= link_to 'Back', admin_currents_path
+  .row
+    .col-lg-12.col-md-12.col-sm-12.col-xs-12
+      = link_to 'Show', @current
+      \|
+      = link_to 'Index', admin_currents_path
