Explicitly state which 'form' partial to render
Be more specific as to which form partial should be rendered from the
admins' Current 'index' and 'edit' views.

--- a/app/views/admin/currents/edit.html.haml
+++ b/app/views/admin/currents/edit.html.haml
@@ -7,7 +7,7 @@
   .row
     .col-lg-12.col-md-12.col-sm-12.col-xs-12
       = form_for @current, class: 'form-inline', url: admin_current_path do |f|
-        = render 'form', :locals => { :f => f }
+        = render partial: 'admin/currents/form', :locals => { :f => f }
 
   .row
     .col-lg-12.col-md-12.col-sm-12.col-xs-12
