Fix submission element class
Change the auto-generated template class for the submit button to use
bootstrap's 'form-group' instead of the unused 'actions.'

--- a/app/views/admin/currents/_form.html.haml
+++ b/app/views/admin/currents/_form.html.haml
@@ -21,6 +21,6 @@
   .col-lg-8.col-md-8.col-sm-8.col-xs-8
     = f.text_area :description, class: 'form-control', rows: '4'
 
-.actions.row
+.form-group.row
   .col-lg-2.col-md-2.col-sm-2.col-xs-2.col-lg-offset-2.col-md-offset-2.col-sm-offset-2.col-xs-offset-2
     = f.submit 'Save', class: 'btn btn-primary'
