--- a/app/views/admin/ideas/_form.html.haml
+++ b/app/views/admin/ideas/_form.html.haml
@@ -37,6 +37,6 @@
     .col-lg-8.col-md-8.col-sm-8.col-xs-8
       = render :partial => 'admin/tags/tag_editor', :locals => { :f => f }
 
-  .actions.row
+  .form-group.row
     .col-lg-2.col-md-2.col-sm-2.col-xs-2.col-lg-offset-2.col-md-offset-2.col-sm-offset-2.col-xs-offset-2
       = f.submit 'Save', class: 'btn btn-primary'
