Fix Admin Currents edit form url
Add the current record ID for which current will be manipualted to the
url that will be used when submitting the form back to the application.
Without the record specified, the application can't complete the url to
include the ID of the Current.

--- a/app/views/admin/currents/edit.html.haml
+++ b/app/views/admin/currents/edit.html.haml
@@ -6,7 +6,7 @@
 
   .row
     .col-lg-12.col-md-12.col-sm-12.col-xs-12
-      = form_for @current, class: 'form-inline', url: admin_current_path do |f|
+      = form_for @current, class: 'form-inline', url: admin_current_path(@current) do |f|
         = render partial: 'admin/currents/form', :locals => { :f => f }
 
   .row
