--- a/app/views/admin/ideas/edit.html.haml
+++ b/app/views/admin/ideas/edit.html.haml
@@ -6,7 +6,7 @@
 .row
   .col-lg-12.col-md-12.col-sm-12.col-xs-12
     = form_for @idea, class: 'form-inline', url: admin_idea_path do |f|
-      = render 'form', :locals => { :f => f }
+      = render partial: 'admin/ideas/form', :locals => { :f => f }
 
 .row
   .col-lg-12.col-md-12.col-sm-12.col-xs-12
