Specify form partial in index view
Specify that a partial will be rendered so that the form created here
can be passed to the partial as a local variable and its form inputs be
attached to the same form.

--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -17,7 +17,7 @@
           .page-header
             %h2 New Idea
           = form_for @idea, class: 'form-inline', url: admin_ideas_path do |f|
-            = render 'form', :locals => { :f => f }
+            = render partial: 'admin/ideas/form', :locals => { :f => f }
 
 %br
 %br
