Classify Idea rows with bootstrap colors
Apply bootstrap classes to each idea's row if they have certain
attributes (first case is only if their tagged as 'pending' for their
current). Other checks can be added in later such as 'danger' if the
idea has been marked as inappropriate. Colorizing the rows will help
make the ideas that need attention stand out.

--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -39,7 +39,7 @@
             %th Manage
 
           - @ideas.each do |idea|
-            %tr
+            %tr{ class: needs_attention(idea) }
               %td= idea.id
               %td= check_box_tag 'ideas[]', idea.id, false, class: 'idea_checkbox'
               %td= idea.rating
