Add a visual flag for Ideas with pending currents
Add a glyphicon warning to the table rows containing ideas that have
their current association marked as 'pending.' The flag will help show
admins which part of the idea record needs their attention.

--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -49,6 +49,8 @@
               %td
                 - if idea.current
                   = link_to "#{idea.current.title}", current_path(idea.current)
+                - if idea.current_pending
+                  %i.glyphicon.glyphicon-warning-sign
               %td
                 - idea.tags.each do |tag|
                   = render :partial => 'tags/tag', :locals => { :tag => tag }
