--- a/app/views/admin/ideas/index.html.haml
+++ b/app/views/admin/ideas/index.html.haml
@@ -58,4 +58,4 @@
                 = link_to 'Edit', edit_admin_idea_path(idea)
                 \|
                 = link_to 'Delete', idea, :method => :delete, :data => { :confirm => 'Are you sure?' }
-        = submit_tag 'Delete Selected', class: 'btn btn-danger'
+        = submit_tag 'Delete Selected', class: 'btn btn-danger', :data => { :confirm => 'Are you sure?' }
